--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.security.user.password=root
 spring.security.user.roles=manager
 spring.cache.type=none
 spring.web.resources.add-mappings=true
+logging.level.org.springframework=DEBUG
+logging.level.org.thymeleaf=DEBUG
